# PlayGenie

./: .dockerignore  .gitignore  About.md  Dockerfile  README.md  generate.py  main.py  pyproject.toml
research/: EDA.ipynb  data_prep.ipynb  data_preprocessing.ipynb  graphs.ipynb  model.ipynb
src/: config.py
src/playgenie/: loss.py  model.py
src/playgenie/data/: __init__.py  dataset.py
src/playgenie/scripts/: inference.py  train.py
src/playgenie/utils/: logging.py  optuna.py  qdrant_search.py  wandb.py
