[project]
name = "playgenie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch",
    "pandas",
    "numpy",
    "networkx>=3.5",
    "ruff>=0.12.8",
    "pyright>=1.1.403",
]


[tool.setuptools]
package-dir = {"" = "src"}

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
