[project]
name = "playgenie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch",
    "pandas",
    "numpy",
    "networkx>=3.5",
    "ruff>=0.12.8",
    "pyright>=1.1.403",
    "tqdm>=4.67.1",
    "sentence-transformers>=5.1.0",
    "optuna>=4.4.0",
    "wandb>=0.21.1",
    "python-dotenv>=1.1.1",
    "pyspark>=4.0.0",
    "iprogress>=0.4",
    "pyarrow>=21.0.0",
]


[tool.setuptools]
package-dir = {"" = "src"}

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
